force-app/main/default/objects/B2B_CommerceLog__c/B2B_CommerceLog__c.object-meta.xml
<CustomObject>
    <label>B2B Commerce Log</label>
    <nameField>
        <displayFormat>CL-{00000}</displayFormat>
        <label>B2B Commerce Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Commerce Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>