force-app/main/default/objects/B2B_CommerceLog__c/fields/B2B_Message__c.field-meta.xml
<CustomField>
    <fullName>B2B_Message__c</fullName>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>