force-app/main/default/objects/B2B_CommerceLog__c/fields/B2B_Process__c.field-meta.xml
<CustomField>
    <fullName>B2B_Process__c</fullName>
    <label>Process</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Checkout</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>ClientSide</fullName>
            </value>
            <value>
                <fullName>Register</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>CommerceSetup</fullName>
                <label>B2B CommerceSetup</label>
            </value>
            <value>
                <fullName>Translation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>