force-app/main/default/objects/B2B_CommerceLog__c/fields/B2B_Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>B2B_Related_Record_Id__c</fullName>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>