force-app/main/default/objects/B2B_CommerceLog__c/fields/B2B_Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>B2B_Stack_Trace__c</fullName>
    <label>Stack Trace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>