force-app/main/default/objects/B2B_CommerceLog__c/fields/B2B_Type__c.field-meta.xml
<CustomField>
    <fullName>B2B_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>