force-app/main/default/objects/B2B_CommerceLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>B2B_Message__c</columns>
    <columns>B2B_Type__c</columns>
    <columns>B2B_Process__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>